force-app/main/default/objects/Change_Order_Option_Details__mdt/Change_Order_Option_Details__mdt.object-meta.xml
<CustomObject>
    <label>Change Order Option Details</label>
    <pluralLabel>Change Order Option Details</pluralLabel>
</CustomObject>