force-app/main/default/objects/Change_Order_Option_Details__mdt/fields/Change_Order_Option__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Option__c</fullName>
    <label>Change Order Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>