force-app/main/default/objects/Change_Order_Option_Details__mdt/fields/Section_Description__c.field-meta.xml
<CustomField>
    <fullName>Section_Description__c</fullName>
    <label>Section Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>